<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 観光地検索 -->
    <TextView
        android:id="@+id/textOuting"
        android:layout_width="414dp"
        android:layout_height="61dp"
        android:background="#87CEEB"
        android:gravity="center"
        android:text="@string/meeting_title"
        android:textAlignment="center"
        android:textColor="#FDFBFB"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/meeting_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <View
        android:id="@+id/meeting_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textOuting" />

    <TextView
        android:id="@+id/meeting_place_str"
        android:layout_width="129dp"
        android:layout_height="31dp"
        android:layout_marginTop="288dp"
        android:autoSizeTextType="uniform"
        android:text="@string/meeting_place_str"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/meeting_view" />

    <TextView
        android:id="@+id/meeting_place"
        android:layout_width="146dp"
        android:layout_height="29dp"
        android:layout_marginTop="288dp"
        android:autoSizeTextType="uniform"
        android:text="東京"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.796"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/meeting_view" />

    <TextView
        android:id="@+id/meeting_time_str"
        android:layout_width="161dp"
        android:layout_height="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/meeting_time_str"
        android:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/meeting_view" />

    <TextView
        android:id="@+id/meeting_time"
        android:layout_width="96dp"
        android:layout_height="28dp"
        android:layout_marginTop="24dp"
        android:text="11:00"
        android:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.669"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/meeting_view" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        android:text="@string/weatherview_back_button"
        android:backgroundTint="#7C4DFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/setting_button"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        android:text="@string/meeting_setting_button"
        android:backgroundTint="#ACACAC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.699"
        app:layout_constraintStart_toEndOf="@+id/back_button" />

    <com.websarva.wings.android.asyncsample.AnalogClock
        android:id="@+id/analogclock"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textOuting" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="251dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:text="@string/meeting_map_str"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meeting_place_str" />

    <ImageButton
        android:id="@+id/map_button"
        android:layout_width="65dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meeting_place_str"
        app:srcCompat="@drawable/map"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="302dp"
        android:layout_height="33dp"
        android:layout_marginTop="20dp"
        android:text="アラームは次の日の11:00に鳴ります"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="302dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:text="@string/meeting_enable_tentime_str"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

</androidx.constraintlayout.widget.ConstraintLayout>